--- a/BloodManagementSystem/Donor/DonorLogin.resx
+++ b/BloodManagementSystem/Donor/DonorLogin.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="kryptonLabel3.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="kryptonLabel3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>484, 213</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="kryptonLabel3.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>417, 161</value>
   </data>
   <data name="kryptonLabel3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>115, 32</value>
+    <value>93, 26</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="kryptonLabel3.TabIndex" type="System.Int32, mscorlib">
@@ -147,14 +147,14 @@
   <data name="&gt;&gt;kryptonLabel3.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
-  <data name="txt_usDonor.Location" type="System.Drawing.Point, System.Drawing">
-    <value>484, 144</value>
+  <data name="txt_usDonor.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
   </data>
-  <data name="txt_usDonor.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="txt_usDonor.Location" type="System.Drawing.Point, System.Drawing">
+    <value>417, 105</value>
   </data>
   <data name="txt_usDonor.Size" type="System.Drawing.Size, System.Drawing">
-    <value>335, 39</value>
+    <value>251, 35</value>
   </data>
   <data name="txt_usDonor.TabIndex" type="System.Int32, mscorlib">
     <value>23</value>
@@ -171,14 +171,14 @@
   <data name="&gt;&gt;txt_usDonor.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="lbl_UserName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>484, 94</value>
+  <data name="lbl_UserName.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
   </data>
-  <data name="lbl_UserName.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="lbl_UserName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>417, 64</value>
   </data>
   <data name="lbl_UserName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 31</value>
+    <value>104, 26</value>
   </data>
   <data name="lbl_UserName.TabIndex" type="System.Int32, mscorlib">
     <value>22</value>
@@ -198,14 +198,14 @@
   <data name="&gt;&gt;lbl_UserName.ZOrder" xml:space="preserve">
     <value>5</value>
   </data>
-  <data name="txt_pwDonor.Location" type="System.Drawing.Point, System.Drawing">
-    <value>484, 252</value>
+  <data name="txt_pwDonor.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
   </data>
-  <data name="txt_pwDonor.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="txt_pwDonor.Location" type="System.Drawing.Point, System.Drawing">
+    <value>417, 193</value>
   </data>
   <data name="txt_pwDonor.Size" type="System.Drawing.Size, System.Drawing">
-    <value>335, 39</value>
+    <value>251, 35</value>
   </data>
   <data name="txt_pwDonor.TabIndex" type="System.Int32, mscorlib">
     <value>30</value>
@@ -222,17 +222,17 @@
   <data name="&gt;&gt;txt_pwDonor.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
+  <data name="btn_Login.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
+  </data>
   <data name="btn_Login.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="btn_Login.Location" type="System.Drawing.Point, System.Drawing">
-    <value>560, 347</value>
-  </data>
-  <data name="btn_Login.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>474, 270</value>
   </data>
   <data name="btn_Login.Size" type="System.Drawing.Size, System.Drawing">
-    <value>177, 47</value>
+    <value>133, 38</value>
   </data>
   <data name="btn_Login.TabIndex" type="System.Int32, mscorlib">
     <value>33</value>
@@ -252,17 +252,17 @@
   <data name="&gt;&gt;btn_Login.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <data name="btn_CreateAcc.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
+  </data>
   <data name="btn_CreateAcc.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="btn_CreateAcc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>505, 401</value>
-  </data>
-  <data name="btn_CreateAcc.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>433, 314</value>
   </data>
   <data name="btn_CreateAcc.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 47</value>
+    <value>217, 38</value>
   </data>
   <data name="btn_CreateAcc.TabIndex" type="System.Int32, mscorlib">
     <value>34</value>
@@ -282,14 +282,14 @@
   <data name="&gt;&gt;btn_CreateAcc.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="btn_ForgotPassword.Location" type="System.Drawing.Point, System.Drawing">
-    <value>701, 295</value>
+  <data name="btn_ForgotPassword.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
   </data>
-  <data name="btn_ForgotPassword.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="btn_ForgotPassword.Location" type="System.Drawing.Point, System.Drawing">
+    <value>580, 228</value>
   </data>
   <data name="btn_ForgotPassword.Size" type="System.Drawing.Size, System.Drawing">
-    <value>123, 21</value>
+    <value>99, 17</value>
   </data>
   <data name="btn_ForgotPassword.TabIndex" type="System.Int32, mscorlib">
     <value>35</value>
@@ -316,7 +316,7 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+    <value>6, 13</value>
   </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2875,7 +2875,10 @@
     <value>Stretch</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1336, 577</value>
+    <value>1002, 469</value>
+  </data>
+  <data name="gunaLabel1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>None</value>
   </data>
   <data name="gunaLabel1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2884,13 +2887,10 @@
     <value>Times New Roman, 16.2pt</value>
   </data>
   <data name="gunaLabel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>555, 28</value>
-  </data>
-  <data name="gunaLabel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>470, 11</value>
   </data>
   <data name="gunaLabel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 33</value>
+    <value>122, 25</value>
   </data>
   <data name="gunaLabel1.TabIndex" type="System.Int32, mscorlib">
     <value>46</value>
@@ -2912,9 +2912,6 @@
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing">
     <value>612, 200</value>
-  </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>Manual</value>
