--- a/BloodManagementSystem/MainWindow.resx
+++ b/BloodManagementSystem/MainWindow.resx
@@ -319,4 +319,7 @@
         v3fOeLX7OI/Lcnl+UdLp6cnL6uXl7NPs47P0P//Z
 </value>
   </data>
+  <metadata name="guna2BorderlessForm1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
